# embedder_android

./: .gitignore  README.md  embedder_android.sublime-project  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/flutter/android/embedder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeUserPresets.json  activity.cc  activity.h  embedder.cc  engine.cc  engine.h  engine_builder.h  logging.cc  logging.h  macros.h  main.cc  native-lib.cpp
app/src/main/cpp/egl/: config.cc  config.h  context.cc  context.h  display.cc  display.h  egl.cc  egl_portable.cc  egl_portable.h  image.cc  image.h  surface.cc  surface.h
app/src/main/java/dev/flutter/android/embedder/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/flutter/android/embedder/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
